--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 12:05:06 2018</p>
+         Last Run: Tue Nov 27 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>73</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>9</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>5</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
                         <td>10</td>
                      </tr>
                      <tr>
-                        <td>11:00 PM</td>
+                        <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>13</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>5</td>
+                        <td>80</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-6",
-                 "-7"
+                 "-7",
+                 "-9"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
-                 "-4"
+                 "-4",
+                 "-5"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "75",
-                 "78"
+                 "74",
+                 "76",
+                 "80"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
                  "10",
-                 "7"
+                 "13",
+                 "12"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 12:05:06 2018</p>
+         Last Run: Tue Nov 27 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>24</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
@@ -260,8 +260,8 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>8</td>
-                        <td>68</td>
+                        <td>6</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -270,14 +270,14 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>7</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-5"
+                 "-6"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "-3",
                  "-3",
-                 "-2"
+                 "-3"
                ]
              }
            ]
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "8",
+                 "6",
                  "7"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "68",
-                 "68"
+                 "73",
+                 "70",
+                 "69"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "78",
                  "73",
-                 "71"
+                 "72"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 12:05:06 2018</p>
+         Last Run: Tue Nov 27 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,22 +464,22 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>6</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNE</td>
-                        <td>77</td>
+                        <td>NE</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>6</td>
-                        <td>71</td>
+                        <td>5</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NE</td>
+                        <td>6</td>
+                        <td>ENE</td>
                         <td>64</td>
                      </tr>
                      <tr>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>55</td>
+                        <td>ENE</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "6",
+                 "5",
                  "5"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "71",
-                 "67"
+                 "78",
+                 "74",
+                 "69"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
+                 "76",
                  "64",
-                 "55"
+                 "54"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 12:05:06 2018</p>
+         Last Run: Tue Nov 27 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,22 +676,22 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-11</td>
+                        <td>-16</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-11</td>
+                        <td>-16</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -700,10 +700,10 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-12</td>
+                        <td>-17</td>
                         <td>4</td>
-                        <td>76</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-14",
-                 "-14",
-                 "-16"
+                 "-16",
+                 "-16",
+                 "-17"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
-                 "-10",
-                 "-11"
+                 "-11",
+                 "-11",
+                 "-12"
                ]
              }
            ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "73",
-                 "76"
+                 "78",
+                 "78",
+                 "79"
                ]
              },
              {
@@ -827,7 +827,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
+                 "19",
                  "15",
                  "13"
                ]
