--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 13:05:02 2018</p>
+         Last Run: Tue Nov 27 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,29 +31,17 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>5</td>
-                        <td>74</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>10</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>15</td>
                      </tr>
                      <tr>
-                        <td>11:00 PM</td>
+                        <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
@@ -62,7 +50,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>24</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>5</td>
+                        <td>85</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
                  "-7",
-                 "-9"
+                 "-9",
+                 "-10"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
                  "-4",
-                 "-5"
+                 "-5",
+                 "-6"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "76",
-                 "80"
+                 "77",
+                 "80",
+                 "85"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "13",
-                 "12"
+                 "15",
+                 "24",
+                 "27"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 13:05:02 2018</p>
+         Last Run: Tue Nov 27 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -246,38 +246,38 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>24</td>
-                        <td>73</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>70</td>
+                        <td>23</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>73</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>69</td>
+                        <td>24</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>72</td>
+                        <td>73</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-7",
                  "-6",
                  "-6"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-3",
                  "-3"
                ]
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "6",
-                 "7"
+                 "23",
+                 "24"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "76",
                  "73",
-                 "70",
-                 "69"
+                 "72"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "73",
-                 "72"
+                 "79",
+                 "74",
+                 "73"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 13:05:02 2018</p>
+         Last Run: Tue Nov 27 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>6</td>
-                        <td>78</td>
+                        <td>Overcast</td>
+                        <td>-6</td>
+                        <td>-9</td>
+                        <td>24</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>76</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>5</td>
-                        <td>74</td>
+                        <td>Overcast</td>
+                        <td>-5</td>
+                        <td>-8</td>
+                        <td>24</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>64</td>
+                        <td>NE</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>5</td>
-                        <td>69</td>
+                        <td>Overcast</td>
+                        <td>-5</td>
+                        <td>-8</td>
+                        <td>23</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>ENE</td>
-                        <td>54</td>
+                        <td>6</td>
+                        <td>NE</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-9",
                  "-8",
-                 "-7",
-                 "-7"
+                 "-8"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-6",
                  "-5",
-                 "-4",
-                 "-4"
+                 "-5"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "5",
-                 "5"
+                 "24",
+                 "24",
+                 "23"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "74",
-                 "69"
+                 "83",
+                 "79",
+                 "73"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "64",
-                 "54"
+                 "88",
+                 "86",
+                 "85"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 13:05:02 2018</p>
+         Last Run: Tue Nov 27 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>Partly Cloudy</td>
+                        <td>-12</td>
+                        <td>-17</td>
+                        <td>5</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>19</td>
+                        <td>WSW</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>Partly Cloudy</td>
+                        <td>-12</td>
+                        <td>-17</td>
+                        <td>5</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>Partly Cloudy</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
-                 "-16",
-                 "-17"
+                 "-17",
+                 "-17",
+                 "-18"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
-                 "-11",
-                 "-12"
+                 "-12",
+                 "-12",
+                 "-13"
                ]
              }
            ]
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
+                 "5",
+                 "5",
                  "4"
                ]
              },
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "78",
-                 "79"
+                 "82",
+                 "80",
+                 "80"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "15",
-                 "13"
+                 "37",
+                 "38",
+                 "39"
                ]
              }
            ]
