--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 14:05:02 2018</p>
+         Last Run: Tue Nov 27 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
+                 "78",
                  "80",
-                 "85"
+                 "86"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "24",
-                 "27"
+                 "12",
+                 "20",
+                 "23"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 14:05:02 2018</p>
+         Last Run: Tue Nov 27 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -253,31 +253,31 @@
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>79</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>74</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>24</td>
-                        <td>72</td>
+                        <td>23</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>73</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "23",
-                 "24"
+                 "22",
+                 "23"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "data":[
                  "76",
                  "73",
-                 "72"
+                 "71"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "74",
-                 "73"
+                 "78",
+                 "73",
+                 "71"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 14:05:02 2018</p>
+         Last Run: Tue Nov 27 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -488,7 +488,7 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>23</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
@@ -603,7 +603,7 @@
                "data":[
                  "83",
                  "79",
-                 "73"
+                 "74"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 14:05:02 2018</p>
+         Last Run: Tue Nov 27 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,35 +679,35 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>38</td>
+                        <td>WSW</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-13</td>
                         <td>-18</td>
-                        <td>4</td>
-                        <td>80</td>
+                        <td>5</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>39</td>
+                        <td>WSW</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-17",
-                 "-17",
+                 "-18",
                  "-18"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-12",
-                 "-12",
+                 "-13",
                  "-13"
                ]
              }
@@ -807,7 +807,7 @@
                "data":[
                  "5",
                  "5",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "80",
-                 "80"
+                 "83",
+                 "81",
+                 "82"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "38",
-                 "39"
+                 "40",
+                 "41",
+                 "42"
                ]
              }
            ]
