--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 16:05:02 2018</p>
+         Last Run: Tue Nov 27 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
-                        <td>-8</td>
+                        <td>-7</td>
                         <td>5</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>9</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>5</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-7",
                  "-9",
                  "-10"
                ]
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "76",
-                 "78",
+                 "79",
                  "82"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "12",
-                 "19"
+                 "8",
+                 "14",
+                 "20"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 16:05:02 2018</p>
+         Last Run: Tue Nov 27 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -249,23 +249,23 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>78</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>22</td>
+                        <td>23</td>
                         <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>74</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "22",
+                 "23",
                  "23"
                ]
              },
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "77",
                  "73",
                  "71"
                ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "74",
-                 "72"
+                 "72",
+                 "71",
+                 "71"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 16:05:02 2018</p>
+         Last Run: Tue Nov 27 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>84</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -614,7 +614,7 @@
                "data":[
                  "88",
                  "86",
-                 "84"
+                 "85"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 16:05:02 2018</p>
+         Last Run: Tue Nov 27 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,7 +683,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>42</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -818,7 +818,7 @@
                "data":[
                  "81",
                  "80",
-                 "80"
+                 "81"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
-                 "43",
-                 "44"
+                 "37",
+                 "38",
+                 "39"
                ]
              }
            ]
