--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 02:05:02 2018</p>
+         Last Run: Thu Nov 29 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>21</td>
+                        <td>22</td>
                         <td>77</td>
                         <td>0</td>
                         <td>10</td>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
+                 "22",
                  "24",
                  "24"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 02:05:02 2018</p>
+         Last Run: Thu Nov 29 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>24</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>95</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>35</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>22</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "80",
-                 "75"
+                 "82",
+                 "79",
+                 "76"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "94",
                  "95",
-                 "96",
                  "97"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 02:05:02 2018</p>
+         Last Run: Thu Nov 29 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -467,8 +467,8 @@
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>22</td>
+                        <td>WNW</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -488,7 +488,7 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -603,7 +603,7 @@
                "data":[
                  "82",
                  "83",
-                 "86"
+                 "85"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
+                 "23",
                  "16",
                  "12"
                ]
