--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 03:05:07 2018</p>
+         Last Run: Fri Nov 30 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -57,12 +57,12 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>74</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "24",
                  "24",
-                 "40"
+                 "41"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "75",
                  "73",
                  "74"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
+                 "96",
                  "98",
-                 "97"
+                 "98"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 03:05:07 2018</p>
+         Last Run: Fri Nov 30 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,24 +248,24 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>50</td>
+                        <td>52</td>
                         <td>79</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>97</td>
+                        <td>99</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>46</td>
-                        <td>75</td>
+                        <td>48</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "50",
-                 "46",
+                 "52",
+                 "48",
                  "32"
                ]
              },
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "75",
+                 "74",
                  "72"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "95",
-                 "95"
+                 "99",
+                 "98",
+                 "98"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 03:05:07 2018</p>
+         Last Run: Fri Nov 30 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -466,9 +466,9 @@
                         <td>6</td>
                         <td>80</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>W</td>
-                        <td>45</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>6</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>26</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "79",
+                 "78",
                  "80"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "26",
-                 "15"
+                 "41",
+                 "24",
+                 "14"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 03:05:07 2018</p>
+         Last Run: Fri Nov 30 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,11 +677,11 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-13</td>
-                        <td>-18</td>
+                        <td>-19</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>11</td>
                      </tr>
@@ -691,11 +691,11 @@
                         <td>-14</td>
                         <td>-20</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-18",
+                 "-19",
                  "-20",
                  "-20"
                ]
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "78",
+                 "75",
+                 "77",
                  "81"
                ]
              },
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "11",
-                 "11",
+                 "10",
                  "10"
                ]
              }
